🍱 update cushead files

--- a/cushead/manifest.json
+++ b/cushead/manifest.json
@@ -1,15 +1,15 @@
 {
   "manifest_version": 2,
   "version": "0.1.0",
-  "name": "Sample",
-  "short_name": "Sample",
-  "description": "We do things",
+  "name": "cushead",
+  "short_name": "cushead",
+  "description": "example",
   "dir": "ltr",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
-  "start_url": "/",
+  "start_url": "/cushead/",
   "orientation": "landscape",
-  "scope": "/",
+  "scope": "/cushead/",
   "display": "standalone",
   "platform": "web",
   "prefer_related_applications": false,
