--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: lucasvazq.py
 email: lucas5zvazquez@gmail.com
 description: Python programmer and Web Developer
 baseurl: "/"
-url: "http://lucasvazq.github.io/"
+url: "https://litoral-trans.com.ar"
 github_username: lucasvazq
 
 theme: minima
