--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: lucasvazq.py
 email: lucas5zvazquez@gmail.com
 description: Python programmer and Web Developer
 baseurl: "/"
-url: "https://litoral-trans.com.ar"
+url: "https://lucasvazq.github.io/"
 github_username: lucasvazq
 
 theme: minima
